# agit

./: .gitattributes  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/cli/: compact.rs  diff.rs  init.rs  mod.rs  mv.rs  read.rs  seed.rs  status.rs  sync.rs  write.rs
src/core/: compact.rs  knowledge.rs  log.rs  mod.rs  shadow.rs  staleness.rs
src/git/: mod.rs
src/llm/: mod.rs
src/mcp/: mod.rs
