[package]
name = "agit"
version = "0.1.0"
edition = "2024"
description = "Version control with institutional memory for AI agents"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Glob patterns (for ignore config)
glob = "0.3"

# HTTP client (for LLM-powered seed)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
